...
                android:layout_height="47dp"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:text="@string/event_creation_tv_event_name"/>

            <EditText
                android:id="@+id/ui_edit_event_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:hint="@string/event_creation_hint_event_name"
                android:inputType="text"
                android:textColor="@color/secondaryTextColor"/>
...
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:text="@string/event_creation_tv_start_time"/>

            <Button
                android:id="@+id/button_start_date"
                style="@style/DateButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text=""/>

            <Button
                android:id="@+id/button_start_time"
                style="@style/DateButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text=""/>

...
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:text="@string/event_creation_tv_end_time"/>

        <Button
            android:id="@+id/button_end_date"
            style="@style/DateButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text=""/>

        <Button
            android:id="@+id/button_end_time"
            style="@style/DateButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text=""/>

...

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ui_end_time"
            android:labelFor="@+id/edit_text_description"
            android:paddingTop="20sp"
            android:text="@string/event_creation_tv_description"/>

        <LinearLayout
            android:id="@+id/linear_layout_friends"
            android:layout_width="match_parent"
...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="bottom"/>

            <Button
                android:id="@+id/button_add_members"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/event_creation_button_add_members"/>

...
