<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GroupUp</string>

    <!-- ToolbarActivity -->
    <string name="toolbar_image_left">Most left icon in toolbar</string>
    <string name="toolbar_image_second_right">Second most right icon in toolbar</string>
    <string name="toolbar_image_right">Most right icon in toolbar</string>
    <string name="toolbar_title_add_members">Add Members</string>
    <string name="toolbar_title_create_event">Create Event</string>
    <string name="toolbar_title_user_profile">User Profile</string>

    <!-- Welcome page -->
    <string name="welcome_view_powered_by">Powered by Flying Monkeys Team </string>
    <string name="credits_monkey">"Monkey Face" by Oksana Latysheva from thenounproject.com\n
        "Favorite Location" by Creative Stall from thenounproject.com\n
        "User Location Vector Icon" by ProSymbols from thenounproject.com</string>

    <string name="flying_monkey_logo_description">Flying Monkeys logo</string>

    <string name="web_client_id" tools:ignore="TypographyDashes">418104898937-1n61g2sra1bfnd1eupddavfabqqbahi1.apps.googleusercontent.com</string>
    <string name="title_connection_failed">Connection Failed</string>
    <string name="text_firebase_login_failed">Firebase Login Failed</string>
    <string name="text_button_connection_failed">OK</string>
    <string name="button_sign_out_text">Sign Out</string>
    <string name="toast_unable_to_generate_qr">Unable to generate the QR Code</string>
    <string name="toast_unable_to_sign_out">What are you doing here!? You are not even signed it…</string>

    <string name="text_view_display_name_info">Display Name:</string>
    <string name="text_view_display_name_text">NO_DISPLAY_NAME</string>
    <string name="text_view_family_name_info">Family Name:</string>
    <string name="text_view_family_name_text">NO_FAMILY_NAME</string>
    <string name="text_view_given_name_info">Given Name:</string>
    <string name="text_view_given_name_text">NO_GIVEN_NAME</string>
    <string name="text_view_email_info">Email:</string>
    <string name="text_view_email_text">NO_EMAIL</string>

    <!-- Event Creation UI -->
    <string name="event_creation_tv_event_name">Event name : </string>
    <string name="event_creation_hint_event_name">Enter name</string>
    <string name="event_creation_hint_event_description">Enter Description</string>
    <string name="event_creation_tv_start_time">Start time : </string>
    <string name="event_creation_tv_end_time">End time : </string>
    <string name="event_creation_tv_description">Description : </string>
    <string name="event_creation_button_add_members">Add members</string>
    <string name="event_creation_tv_number_of_members">Number of members :</string>
    <string name="event_creation_toast_non_empty_event_name">Give a name to your event !</string>
    <string name="event_creation_toast_event_name_too_long">The name of the event is too long.</string>
    <string name="event_creation_toast_event_start_before_now">Are you planning to go back to the past ?</string>
    <string name="event_creation_toast_event_end_before_begin">Your event ends before it begins.</string>
    <string name="event_creation_toast_event_last_1_minute">Your event should last for at least 1 minute.</string>
    <string name="event_creation_error_cant_add_yourself">You\'ll be automatically added to the event.</string>

    <!-- Members Adding UI -->
    <string name="members_adding_tv_greet_user">You can invite a friend who does not have the application yet by entering his email address !</string>
    <string name="members_adding_tv_members">Members : </string>
    <string name="members_adding_error_toast_invalid_email">Invalid email address !</string>
    <string name="members_adding_tv_invite_new_members">Invite new members</string>
    <string name="members_adding_hint_invite_new_members">Email of new member</string>
    <string name="Logo_QR">Logo of the QR code</string>
    <string name="plus_sign">Plus sign</string>

    <!-- Event Listing UI -->

    <!-- activity_display_qr-->
    <string name="QR_code">QR Code</string>

    <!-- Event Description -->
    <string name="event_description_tv_start_date">Start Date : </string>
    <string name="event_description_tv_end_date">End Date : </string>
    <string name="event_description_tv_description">Description : </string>
    <string name="event_description_tv_members">Members : </string>
    <string name="no_event_description">NO_EVENT_DESCRIPTION</string>
    <string name="no_event_end_date">NO_EVENT_END_DATE</string>
    <string name="no_event_name">NO_EVENT_NAME</string>
    <string name="no_event_start_date">NO_EVENT_START_DATE</string>
    <string name="change_the_description_of_the_event">Add description of the event</string>
    <string name="event_description_tap_view_map">Map</string>
    <string name="event_description_tap_view_details">Details</string>
    <string name="event_description_tap_view_media">Media</string>

    <!-- Geo Location -->
    <string name="alert_dialog_ask_enable_provider_title">Please Grant Permission</string>
    <string name="alert_dialog_ask_enable_provider_message">To be able to share your live location
        during the event and invite friends via QR Scanner you have to grant GroupUp! the
        permission to use your location and camera.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_title_delete_event">Deleting Event</string>
    <string name="title_activity_map">Map</string>

    <!-- File Management -->
    <string name="file_management_tv_description">Here you can see the files of the event and add some new ones !</string>
    <string name="file_management_button_add_file" tools:keep="@string/file_management_button_add_file">Add file</string>
    <string name="file_management_toast_error_file_uri">An error occurred when recovering the media</string>
    <string name="file_management_toast_error_file_not_created">"Error While creating the file"</string>

    <!--Event Invitation -->
    <string name="event_invitation_title">You are invited to an event !</string>
    <string name="event_invitation_dialog_decline">Decline</string>
    <string name="event_invitation_dialog_accept">Accept</string>

    <string name="event_invitation_dialog_name">Event Name :</string>
    <string name="event_invitation_dialog_start">Start Date :</string>
    <string name="event_invitation_dialog_end">End Date :</string>
    <string name="event_invitation_dialog_description">Description :</string>
    <string name="event_invitation_dialog_members">Members in the event :</string>
    <string name="event_invitation_dialog_unknown">Name unknown (this mean that this user has not accept the invitation yet)</string>

    <!-- Gmail Sender Stuff -->
    <string name="sweng_email">swenggroupup@gmail.com</string>
    <string name="sweng_password">swengswengsweng</string>
    <string name="gmail_protocol_key">mail.transport.protocol</string>
    <string name="gmail_protocol_value">smtp</string>
    <string name="gmail_host">smtp.gmail.com</string>
    <string name="gmail_host_key">mail.host</string>
    <string name="gmail_auth_key">mail.smtp.auth</string>
    <string name="gmail_host_value">true</string>
    <string name="gmail_port_key">mail.smtp.port</string>
    <string name="gmail_port_value">465</string>
    <string name="gmail_socketFactory_key">mail.smtp.socketFactory.port</string>
    <string name="gmail_socketFactory_value">465</string>
    <string name="gmail_socketFactory_class_key">mail.smtp.socketFactory.class</string>
    <string name="gmail_socketFactory_class_value">javax.net.ssl.SSLSocketFactory</string>
    <string name="gmail_socketFactory_fallback_key">mail.smtp.socketFactory.fallback</string>
    <string name="gmail_socketFactory_fallback_value">false</string>
    <string name="gmail_quitwait_key">mail.smtp.quitwait</string>
    <string name="gmail_quitwait_value">false</string>
    <string name="invitationMail_content">Hi! You have been invited to an event on GroupUp! Check it out! ✌️</string>
    <string name="invitationMail_senderAddress"><![CDATA[GroupUp! <swenggroupup@gmail.com>]]></string>
    <string name="invitationMail_subject">[GroupUp!] New invitation️</string>
    <string name="event_listing_extraIndex">eventIndex</string>

    <!-- Full screen file -->
    <string name="full_screen_image_content_description">Image to be displayed in full screen</string>
    <string name="full_screen_video_content_description">Video to be displayed in full screen</string>

    <!-- Points of Interest -->
    <string name="poi_title_hint">title</string>
    <string name="poi_description_hint">description</string>
    <string name="poi_dialog_title">Add a Point Of Interest</string>
    <string name="poi_action_title">What you want to do, huh?</string>
    <string name="poi_action_remove">Remove</string>
    <string name="poi_action_cancel">Cancel</string>
    <string name="poi_create_cancel">Cancel</string>
    <string name="poi_create_add">Add</string>
    <string name="map_activity_poi_instruction">You can add Points Of Interest by long clicking on the map.</string>
    <string name="poi_action_route">Bring me there</string>

</resources>

