...
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/default_gap"
    android:layout_marginEnd="@dimen/default_gap"
    android:layout_marginStart="@dimen/default_gap">

    <ImageView
        android:id="@+id/buttonScanQR"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.09"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Logo_QR"
        android:cropToPadding="false"
        android:src="@drawable/qr_code"/>

    <EditText
        android:id="@+id/edit_text_add_member"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_weight="0.8"
        android:hint="@string/members_adding_hint_invite_new_members"
        android:inputType="textEmailAddress"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/image_view_add_member"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:background="@android:color/transparent"
        android:contentDescription="@string/plus_sign"
        android:src="@drawable/ic_plus_box"/>
...
